commit msg upated

--- a/templates/index.html
+++ b/templates/index.html
@@ -52,7 +52,7 @@
           </p>
           <p><span class="label">Commit Message:</span></p>
           <blockquote class="blockquote ms-3">
-            <p>{{ git_info.message }}</p>
+            {{ git_info.message }}
           </blockquote>
         </div>
       </div>
