commit msg upated

--- a/templates/index.html
+++ b/templates/index.html
@@ -50,10 +50,10 @@
             <span class="label">Commit Hash:</span>
             <code>{{ git_info.commit }}</code>
           </p>
-          <p><span class="label">Commit Message:</span></p>
-          <blockquote class="blockquote ms-3">
-            {{ git_info.message }}
-          </blockquote>
+          <p>
+            <span class="label">Commit Message:</span>
+            <code>{{ git_info.message }}</code>
+          </p>
         </div>
       </div>
     </div>
