--- a/templates/index.html
+++ b/templates/index.html
@@ -18,11 +18,11 @@
       .card {
         max-width: 500px;
         margin: 50px auto;
-        border-radius: 1rem;
-        box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+        border-radius: 2rem;
+        box-shadow: 0 0.5rem 1rem rgba(75, 70, 70, 0.15);
       }
       .card-header {
-        background-color: #0d6efd;
+        background-color: #0dfd8d;
         color: white;
         border-top-left-radius: 1rem;
         border-top-right-radius: 1rem;
