--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
         box-shadow: 0 0.5rem 1rem rgba(75, 70, 70, 0.15);
       }
       .card-header {
-        background-color: #0dfd8d;
+        background-color: #0d9dfd;
         color: white;
         border-top-left-radius: 1rem;
         border-top-right-radius: 1rem;
